# llm-agents

./: README.md
deep_resume/: .gitignore  README.md  conf.yaml  main.py  pyproject.toml
deep_resume/examples/: .env.example  conf.yaml
deep_resume/src/: workflow.py
deep_resume/src/agents/: __init__.py  agents.py
deep_resume/src/config/: __init__.py  agents.py  configuration.py
deep_resume/src/graph/: __init__.py  builder.py  nodes.py  types.py
deep_resume/src/llms/: llm.py
deep_resume/src/prompts/: analyst.md  report_model.py  resume_model.py  reviewer.md  topic_generator.py  topic_model.py
deep_resume/src/tools/: __init__.py  search.py
expert_interview/: README.md  pyproject.toml
expert_interview/examples/: .env.example
expert_interview/src/agent/: expert_interview_agent.py
expert_interview/src/prompts/: __init__.py  questions.py
xhs_writer/: README.md  pyproject.toml
xhs_writer/examples/: .env.example
xhs_writer/src/: open_ai_ask.py
xhs_writer/src/prompt/: example.py  system.py
