[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-resume"
version = "0.1.0"
description = "DeepResume project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "jinja2>=3.1.3",
    "duckduckgo-search>=8.0.0",
    "arxiv>=2.2.0",
    "pypdf",
    "json-repair>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.2.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

